# stm32u5_freertos

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  STM32U545xx_FLASH.ld  STM32U545xx_RAM.ld  debug.py  gdb_commands.txt  stmtest.code-workspace  stmtest.ioc
Core/Inc/: main.h  stm32u5xx_hal_conf.h
Core/Src/: main.c  stm32u5xx_it.c
Core/Src/bg96/: CMakeLists.txt  bg96.c  bg96.h  modem_serial.c  modem_serial.h
Core/Src/drv8825/: CMakeLists.txt  drv8825.c  drv8825.h
Core/Src/fifo/: CMakeLists.txt  fifo.c  fifo.h
Drivers/BSP/STM32U5xx_Nucleo/: stm32u5xx_nucleo.c  stm32u5xx_nucleo.h
cmake/: flasher_commands.json.in  gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
freertos_config/: CMakeLists.txt  FreeRTOSCOnfig.h
